--- a/.github/workflows/solverTest.yml
+++ b/.github/workflows/solverTest.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         dotnet-version: ['3.1.x']
@@ -23,6 +23,8 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
+      - name: Install dependencies
+        run: dotnet restore
       - name: Build
         run: dotnet build
       - name: Test
