--- a/.github/workflows/solverTest.yml
+++ b/.github/workflows/solverTest.yml
@@ -31,3 +31,4 @@ jobs:
         working-directory: SquareEquationSolver
       - name: Test
         run: dotnet test
+        working-directory: SquareEquationSolver.Testing
